--- a/index.html
+++ b/index.html
@@ -5,10 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./index.css">
-    <script src="./index.js"></script>
 </head>
 <body>
-    <h1>我是一个大标题一</h1>
+    <h1>我是大标题</h1>
 </body>
 </html>
